Add summaries for weekend of 2023-11-11 and 2023-11-12; add weekend summary; fetch latest personal issues

--- a/personal-issues/1379.md
+++ b/personal-issues/1379.md
@@ -1,5 +1,5 @@
 title:	Vipul Saturday checklist | 2023-11-11
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -8,7 +8,22 @@ projects:
 milestone:	
 number:	1379
 --
+## Personal projects
+
+### Timelines wiki
+
+- [x] ~5 minutes: Make a few updates https://timelines.issarice.com/index.php?title=Detail_construction_for_full_timeline_in_timelines&type=revision&diff=76984&oldid=70291
+
+### Devops streamlining
+
+- [x] ~3 hours: Continue working on MediaWiki upgrades
+
+## Personal finances, income and taxes
+
+- [x] ~7 minutes: Move money around and make a related schema change https://github.com/vipulnaik/personal-finances/commit/4d74f3fb2ad62f26797f0299f93efe98c20c53f7 https://github.com/vipulnaik/personal-finances/commit/a03fd19e8aab50d7534ca8ac34c5aa03fda6eb12
+
 ## Personal chores
 
 - [x] ~35 minutes: Continue to work on steps related to whole body donation
 - [x] ~10 minutes: Review and make minor edits to my health profile; add a few new sections https://github.com/vipulnaik/diet-exercise-health/commits/master/notes/health-profile.md?since=2023-11-11&until=2023-11-11
+- [x] ~10 minutes: Add weekday summaries https://github.com/vipulnaik/daily-updates/commit/620e691562945f96cb02e7f4ea23832241f38872
