Add summaries for period of 2023-11-20 to 2023-11-24

--- a/personal-issues/1388.md
+++ b/personal-issues/1388.md
@@ -1,5 +1,5 @@
 title:	Vipul Monday checklist | 2023-11-20
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -19,6 +19,7 @@ number:	1388
 - [x] ~10 minutes: Plan for an upcoming local trip
 - [x] ~5 minutes: Continue with India trip planning
 - [x] ~55 minutes: Potatoes prep (with spinach, peas, and tomatoes)
+- [x] ~5 minutes: Add summaries for weekend https://github.com/vipulnaik/daily-updates/commit/9fd8d5eb39ac3e2bad8946668ec00e26c23efa64
 
 ## Other activities
 
