Add summaries for weekend of 2023-11-25 and 2023-11-26; add week summary

--- a/personal-issues/1393.md
+++ b/personal-issues/1393.md
@@ -1,5 +1,5 @@
 title:	Vipul Saturday checklist | 2023-11-25
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -8,6 +8,20 @@ projects:
 milestone:	
 number:	1393
 --
+## Personal projects
+
+### Donations list website (DLW)
+
+- [x] ~45 minutes: Continue adding Open Phil AI safety grants https://github.com/vipulnaik/donations/commits?since=2023-11-25&until=2023-11-25
+- [x] ~40 minutes: Work on subcause area specification for AI safety; start classifying Open Phil AI safety grants by subcause area https://github.com/vipulnaik/donations/commits?since=2023-11-25&until=2023-11-25
+- [x] ~20 minutes: Start data entry work for Long-Term Future Fund grants https://github.com/vipulnaik/donations/commit/4d5cc7bb7aff4961732d5783cebe0c0bff6776fe 
+
+### Cause prioritization
+
+- [x] ~7 minutes: Catch up on some Rethink Priorities research
+
 ## Personal chores
 
 - [x] ~5 minutes: Wrap up two-factor recall and some residual aspects of password recall
+- [x] ~10 minutes: Add weekday summaries https://github.com/vipulnaik/daily-updates/commit/76e3d500cfd8fce6d13a33c3f0da712ac8060a96
+- [x] ~1 hour 5 minutes: Potatoes prep (with spinach, tomatoes, and red bell peppers) 
