Add summaries for weekend of 2023-12-02 and 2023-12-03; add week summary; fetch latest personal issues

--- a/personal-issues/1400.md
+++ b/personal-issues/1400.md
@@ -1,5 +1,5 @@
 title:	Vipul Saturday checklist | 2023-12-02
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -13,16 +13,28 @@ number:	1400
 ### Timelines wiki (Future Fund)
 
 - [x] ~12 minutes: Review and [return with feedback](https://timelines.issarice.com/wiki/Talk:Timeline_of_nuclear_risk#Review_by_Vipul_on_2023-12-02) the [timeline of nuclear risk](https://timelines.issarice.com/wiki/Timeline_of_nuclear_risk)
+- [x] ~2 minutes: Send the monthly update to Pablo 
 
 ### Timelines wiki (contract work)
 
 - [x] ~20 minutes: Review and [return with feedback](https://timelines.issarice.com/wiki/Talk:Timeline_of_Hindi_on_the_web#Review_by_Vipul_on_2023-12-02) the [timeline of Hindi on the web](https://timelines.issarice.com/wiki/Timeline_of_Hindi_on_the_web)
 
+### Contract work for Vipul Naik
+
+- [x] ~12 minutes: Add November 2023 payments due to @sebastiansanchez123 https://github.com/vipulnaik/contractwork/commit/9b1dc34b3ac585afd372b67a99de777298bbf031
+
 ### Learning stuff
 
 - [x] ~1 hour 10 minutes: Edit learning subwiki and reply in a conversation
+- [x] ~5 minutes: Do some further reading related to learning 
+
+## Personal finances, income and taxes
+
+- [x] ~20 minutes: Add end-of-November balances; make various related updates https://github.com/vipulnaik/personal-finances/commit/07f9b88a3108351fca96e14d5fa4dc0c99986e00 https://github.com/vipulnaik/personal-finances/commit/3edc1f999d34eac5a7d72ae5f3086d2505b6d17c https://github.com/vipulnaik/personal-finances/commit/c5d93727fce58e15acaedc030bbeb0ed068cd509
 
 ## Personal chores
 
-- [x] ~20 minutes: Periodic house cleaning
-- [x] ~4 minutes: Update my death-or-incapacitation steps by adding links to succession plans 
+- [x] ~23 minutes: Periodic house cleaning
+- [x] ~4 minutes: Update my death-or-incapacitation steps by adding links to succession plans
+- [x] ~10 minutes: Add summaries for weekdays https://github.com/vipulnaik/daily-updates/commit/2b916af1e3be20cfc642c367f5a04823fd974547
+- [x] ~20 minutes: Regular laundry (with extra pickup trip)  
