Add summaries for period of 2023-12-04 to 2023-12-08; fetch latest personal issues

--- a/personal-issues/1402.md
+++ b/personal-issues/1402.md
@@ -1,5 +1,5 @@
 title:	Vipul Monday checklist | 2023-12-04
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -12,8 +12,39 @@ number:	1402
 
 ### Learning stuff
 
-- [x] ~15 minutes: Continue working on learning subwiki
+- [x] ~1 hour: Continue working on learning subwiki; this includes an effective 45 minutes spent on background listening while cooking (actual time was likely more)
+- [x] ~4 minutes: Continue participating in discussion 
+
+### Calculus subwiki
+
+- [x] ~35 minutes: Work on https://calculus.subwiki.org/wiki/Practical:Chain_rule_for_differentiation and do related review, reading, and updates of calculus subwiki
+
+### Cellbio subwiki
+
+- [x] ~5 minutes: Do some review and thinking around next steps
+
+### Contract work stuff
+
+- [x] ~15 minutes: Add November 2023 payments due to @riceissa and tackle a few related items https://github.com/vipulnaik/contractwork/commit/a6dc706d5ad60aa152648f58c2e5d313868286a7
+- [x] ~5 minutes: Add and record PayPal payment made to @riceissa to clear balance https://github.com/vipulnaik/contractwork/commit/e8c5731459819aa302da27230eebf0a1c95f5b81 
+
+## Personal finances, income and taxes
+
+- [x] ~1 minute: Update contractwork balance to reflect November 2023 payments due to @riceissa https://github.com/vipulnaik/personal-finances/commit/bd0ab4a8076440842c3c55e4981733a0731423c9
+
+## Personal chores
+
+- [x] ~5 minutes: Add weekend summary + week summary https://github.com/vipulnaik/daily-updates/commit/d0b0d6ddb16a6fb3f6354be1864a53885c15740a
+- [x] ~1 hour 5 minutes: Meal prep (normal except red bell peppers; so it would be 1 hour 50 minutes, but subtracting 45 minutes spent on background listening while cooking)
+- [x] ~5 minutes: Take out trash and composting
 
 ## House chores
 
 - [x] ~2 minutes: Record an upcoming event
+- [x] ~10 minutes: Fix a closet door issue
+- [x] ~5 minutes: Record various house issues 
+
+## Other activities
+
+- [x] ~5 minutes: Look into some stuff for a friend
+- [x] ~5 minutes: Reach out to a friend 
