Add summaries for weekend of 2023-12-09 and 2023-12-10; add week summary; fetch latest personal issues

--- a/personal-issues/1407.md
+++ b/personal-issues/1407.md
@@ -1,5 +1,5 @@
 title:	Vipul Saturday checklist | 2023-12-09
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -14,11 +14,21 @@ number:	1407
 
 - [x] ~2 minutes: Discuss some stuff
 
+## Personal finances, income and taxes
+
+- [x] ~2 minutes: Add a credit report https://github.com/vipulnaik/personal-finances/commit/574c98c06c4cd584e0ebe1c71333bf04d69b0599
+
 ## Personal chores
 
 - [x] ~10 minutes: Start planning for COVID vaccine booster dose https://github.com/vipulnaik/diet-exercise-health/commit/8b6b47e0d5bd3f65117f275d0a9a94ca3fa73de9
 - [x] ~30 minutes: Get groceries from Trader Joe's (return journey doubled up with friend visit) https://github.com/vipulnaik/diet-exercise-health/commit/33596f6d317dc5354c617f263c883382607fad86
 - [x] ~1 hour 10 minutes: Pick up Amazon stuff https://github.com/vipulnaik/diet-exercise-health/commit/33596f6d317dc5354c617f263c883382607fad86
+- [x] ~10 minutes: Add weekday summaries https://github.com/vipulnaik/daily-updates/commit/d3866ee6436f4da14413199fa8ab02ce99d38e87
+- [x] ~55 minutes: Potatoes prep (with spinach, beans, and tomatoes)
+
+## Family and career planning
+
+- [x] ~1 hour: Start putting a document together
 
 ## Other activities
 
