Add summaries for weekend of 2023-12-23 and 2023-12-24; add week summary; fetch latest personal issues

--- a/personal-issues/1421.md
+++ b/personal-issues/1421.md
@@ -1,5 +1,5 @@
 title:	Vipul Saturday checklist | 2023-12-23
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -19,3 +19,4 @@ number:	1421
 
 - [x] ~1 hour 30 minutes: Downtown Berkeley trip including Goodwill, Citibank, Foto Shop, Target, and Trader Joe's https://github.com/vipulnaik/diet-exercise-health/commit/312194a8474da04ad9b713230e5967b938ede38e
 - [x] ~1 hour 15 minutes: Do some weight estimation for the items in my trip packing checklist
+- [x] ~10 minutes: Add weekday summaries https://github.com/vipulnaik/daily-updates/commit/17b5d1d9980af96b4fc3d49a8a6d695f971ae481 
