Add summaries for period of 2023-12-25 to 2023-12-29; fetch latest personal issues

--- a/personal-issues/1423.md
+++ b/personal-issues/1423.md
@@ -1,5 +1,5 @@
 title:	Vipul Monday checklist | 2023-12-25
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -11,3 +11,10 @@ number:	1423
 ## Personal finances, income and taxes
 
 - [x] ~3 minutes: Add yesterday's Amazon expenses https://github.com/vipulnaik/personal-finances/commit/80172c56955ad53546fd4d8ed6781c99d5aa8ee7
+- [x] ~5 minutes: Add two credit reports https://github.com/vipulnaik/personal-finances/commit/aa7eb4184ba80dc4863557c77a0f0c081de5545b 
+
+## Personal chores
+
+- [x] ~5 minutes: Add weekend summaries and week summary https://github.com/vipulnaik/daily-updates/commit/3a5297069a2140e16c3467d680d6d00b173f7ff3
+- [x] ~2 hours: Meal prep
+- [x] ~5 minutes: Coordinate on some bureaucratic matters
