Add summaries for weekend of 2023-12-30 and 2023-12-31; add week summary, month summary, and year summary; fetch latest personal issues

--- a/personal-issues/1428.md
+++ b/personal-issues/1428.md
@@ -1,5 +1,5 @@
 title:	Vipul Saturday checklist | 2023-12-30
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -10,8 +10,11 @@ number:	1428
 --
 ## Personal finances, income and taxes
 
-- [ ] ~2 hours so far: Continue work on 2023 taxes and finances
+- [x] ~2 hours 30 minutes: Continue work on 2023 taxes and finances
 
 ## Personal chores
 
 - [x] ~5 minutes: Rinse out a couple of hand soap bottles
+- [x] ~10 minutes: Add summaries for weekdays https://github.com/vipulnaik/daily-updates/commit/834f87a8fc43dded7b542c71dc5c69bc1b906a75
+- [x] ~2 hours 10 minutes: Meal prep (extra eggplant, no red bell peppers)
+- [x] ~7 minutes: Do some trip planning 
