Pull in fixes for past personal issues; fetch latest personal issues

--- a/personal-issues/1224.md
+++ b/personal-issues/1224.md
@@ -21,7 +21,7 @@ number:	1224
 ## Personal chores
 
 - [x] ~5 minutes: Do password recalls and related activities
-- [x] ~15 minutes: Regulara laundry
+- [x] ~15 minutes: Regular laundry
 
 ## Other activities
 
