--- a/personal-issues/1329.md
+++ b/personal-issues/1329.md
@@ -15,5 +15,5 @@ number:	1329
 
 ## Personal chores
 
-- [x] ~6 hours: Continue sorting through and organizing documents (there's some wrapping up to be done tomorrow)
+- [x] ~6 hours: Continue sorting through and organizing documents (there's some wrapping up to be done tomorrow); this includes asking the question https://travel.stackexchange.com/questions/183668/should-i-be-stapling-my-uscis-form-i-94-not-cbp-form-i-94-at-every-extension (mirrored at https://github.com/vipulnaik/working-drafts/commit/323fe18cb78dcd744a79c7ae6fb14d8cf5000d76)
 - [x] ~15 minutes: Continue with trip planning and discussion 
