Add summaries for weekend of 2024-01-06 and 2024-01-07; add week summary; fetch latest personal issues

--- a/personal-issues/1435.md
+++ b/personal-issues/1435.md
@@ -1,5 +1,5 @@
 title:	Vipul Saturday checklist | 2024-01-06
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -12,12 +12,7 @@ number:	1435
 
 ### Donations list website (DLW)
 
-- [x] ~5 minutes: Reply to an email
 - [x] ~5 minutes: Fix a bug in the last data reload due to which pages not previously accessed were erroring
-
-### Subwiki stuff (Groupprops)
-
-- [x] ~30 minutes: Reply to an email message related to groupprops
 
 ### Devops stuff
 
@@ -26,6 +21,22 @@ number:	1435
 ## Personal chores
 
 - [x] ~15 minutes: Continue with monthly house cleaning
+- [x] ~10 minutes: Add weekday summaries https://github.com/vipulnaik/daily-updates/commit/fb173790be3b3e85aea827b5196086bc7de6bd61
+- [x] ~15 minutes: Look into a bureaucratic matter
+- [x] ~30 minutes: Work on a travel-related checklist
+- [x] ~5 minutes: Make Walgreens shopping list
+- [x] ~35 minutes: Work on stuff related to travel bureaucracy
+
 ## House chores
 
 - [x] ~2 minutes: Do monthly alarm checks
+- [x] ~4 minutes: Send a message
+
+## Family and career planning
+
+- [x] ~5 minutes: Review some stuff
+
+## Other activities
+
+- [x] ~30 minutes: Reply to an email message with a group theory question (kinda related to groupprops, but I'm counting this as "other activities" rather than "personal projects" since it's not tied to any updates to groupprops)
+- [x] ~5 minutes: Reply to an email
