Add summaries for weekend of 2024-01-13 and 2024-01-14; add week summary; fetch latest personal issues

--- a/personal-issues/1442.md
+++ b/personal-issues/1442.md
@@ -1,13 +1,25 @@
 title:	Vipul Saturday checklist | 2024-01-13
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
-assignees:	
+assignees:	vipulnaik
 projects:	
 milestone:	
 number:	1442
 --
+## Personal finances, income and taxes
+
+- [x] ~3 minutes: Add a credit report https://github.com/vipulnaik/personal-finances/commit/93dfa3ea2e319076d5ad5983a563f6b251108b4b
+
 ## Personal chores
 
-- [x] ~4 minutes: Continue adding notes on COVID-19 vaccine aftereffects https://github.com/vipulnaik/diet-exercise-health/commit/42d375e65e2ddd5387c0d93ec4ad23787a484ab2
+- [x] ~8 minutes: Continue adding notes on COVID-19 vaccine aftereffects https://github.com/vipulnaik/diet-exercise-health/commit/42d375e65e2ddd5387c0d93ec4ad23787a484ab2 https://github.com/vipulnaik/diet-exercise-health/commit/5dc00958e4ff5b76fdf637bf2c08c9cad2e2f9fe https://github.com/vipulnaik/diet-exercise-health/commit/d5d91fe8e78769ccf49f3cdd95a53a98c41e6508
+- [x] ~10 minutes: Add weekday summaries https://github.com/vipulnaik/daily-updates/commit/612e58b12fa05fc91123ffd0f20ccc95736f2560
+- [x] ~15 minutes: Do monthly emergency contact fire drill
+- [x] ~15 minutes: Do monthly account recovery fire drill
+- [x] ~13 minutes: Rice prep
+
+## Other activities
+
+- [x] ~7 minutes: Do research on a health topic in discussion with a friend
