Add summaries for weekend of 2024-01-20 and 2024-01-21; add week summary; fetch latest personal issues

--- a/personal-issues/1449.md
+++ b/personal-issues/1449.md
@@ -1,5 +1,5 @@
 title:	Vipul Saturday checklist | 2024-01-20
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -20,13 +20,18 @@ number:	1449
 
 ## Personal finances, income and taxes
 
-- [x] ~2 minutes: Make some progress with tax stuff
+- [x] ~2 minutes: Make some progress with tax stuff (verify my calculations against the official W-2 forms)
+- [x] ~1 hour: Work on collating India-side income for US tax stuff
 
 ## Personal chores
 
 - [x] ~25 minutes: Execute on blindness fire drill (with redo of some parts in order to cement my learnings)
 - [x] ~5 minutes: Do some cleaning in preparation for use of the cleaned area for some work
+- [x] ~10 minutes: Add weekday summaries https://github.com/vipulnaik/daily-updates/commit/757b5614341fa59d817e40cb964809f8c99becc1
+- [x] ~40 minutes: Continue with trip planning
+- [x] ~1 hour 10 minutes: Meal prep (excluding time multiplexed with watching videos)
+- [x] ~2 minutes: Review documents
 
 ## Other activities
 
-- [ ] ~15 minutes so far: Continue watching videos
+- [x] ~1 hour 35 minutes: Continue watching videos
