Add small amounts of recorded time on personal projects; tweak week summary accordingly; fetch latest personal issues

--- a/personal-issues/1456.md
+++ b/personal-issues/1456.md
@@ -8,6 +8,12 @@ projects:
 milestone:	
 number:	1456
 --
+## Personal projects
+
+### Timelines wiki (Future Fund)
+
+- [x] ~3 minutes: Review and share thoughts in a discussion
+
 ## Personal finances, income and taxes
 
 - [x] ~5 minutes: Add two credit reports https://github.com/vipulnaik/personal-finances/commit/11a2439a182aeaf938e738fbea63f10dfbae8f00 https://github.com/vipulnaik/personal-finances/commit/aef0d8fed40eff8d7f25a4073c712b67df1f3b84
