--- a/personal-issues/1457.md
+++ b/personal-issues/1457.md
@@ -8,6 +8,12 @@ projects:
 milestone:	
 number:	1457
 --
+## Personal projects
+
+### Timelines wiki (Future Fund)
+
+- [x] ~2 minutes: Review and share thoughts in a discussion (continued from yesterday)
+
 ## Personal finances, income and taxes
 
 - [x] ~50 minutes: Continue with tax research
