--- a/personal-issues/1458.md
+++ b/personal-issues/1458.md
@@ -19,6 +19,11 @@ number:	1458
 - [x] ~3 hours 30 minutes: Continue working on tax stuff
 - [x] ~10 minutes: Process a couple of incoming items
 
+## Personal chores
+
+- [x] ~3 minutes: Add Sunday summary and week summary https://github.com/vipulnaik/daily-updates/commit/4fe412b96e4eab200f82add31980a67dfef59c40
+- [x] ~5 minutes: Aborted laundry steps (as washer and dryer were both in use)
+
 ## Other activities
 
-- [ ] ~15 minutes so far: Continue watching videos
+- [x] ~45 minutes: Continue watching videos
