Fix time spent on personal projects for Sunday (mirroring an update to the issue after my previous edit to this repo); fetch latest personal issues including retroactive fixes

--- a/personal-issues/1471.md
+++ b/personal-issues/1471.md
@@ -22,6 +22,10 @@ number:	1471
 
 - [x] ~2 minutes: Do monthly check
 
+### Timelines wiki
+
+- [x] ~2 minutes: Do monthly traffic trends check
+
 ## Personal finances, income and taxes
 
 - [x] ~1 minute: Move money
