--- a/personal-issues/1472.md
+++ b/personal-issues/1472.md
@@ -8,7 +8,29 @@ projects:
 milestone:	
 number:	1472
 --
+## Personal projects
+
+### Contract work for Vipul Naik
+
+- [x] ~8 minutes: Add January 2024 payments due to @riceissa https://github.com/vipulnaik/contractwork/commit/9270055f667262d25fda367767f7723ec400da4e
+
+## Personal finances. income and taxes
+
+- [x] ~2 minutes: Update contractwork balance to reflect payments due update https://github.com/vipulnaik/personal-finances/commit/2387ad8bb8c9dac333c8711365439fc66da24c71
+
 ## Personal chores
 
 - [x] ~5 minutes: Do some toothpaste research
-- [x] ~2 minutes: Continue with trip prep
+- [x] ~7 minutes: Continue with trip prep
+- [x] ~5 minutes: Add weekend summaries and week summary https://github.com/vipulnaik/daily-updates/commit/2e52fba9bee2a9f13595a595dde57ba2e2d498cd
+- [x] ~10 minutes: Continue with bottle cleaning and clean vegetable trays of the fridge
+- [x] ~20 minutes: Potatoes prep (with spinach, peas, and tomatoes)
+- [x] ~5 minutes: Update phone emergency settings
+- [x] ~7 minutes: Look into a login issue
+- [x] ~3 minutes: Process a couple of pieces of mail
+
+## Other activities
+
+- [x] ~35 minutes: Watch videos
+- [x] ~2 minutes: Reply to a message
+- [x] ~15 minutes: Reply to some messages and later forward a few emails based on that
