Add summaries for week of 2024-02-12 to 2024-02-18; fetch latest personal issues

--- a/personal-issues/1472.md
+++ b/personal-issues/1472.md
@@ -1,5 +1,5 @@
 title:	Vipul Monday checklist | 2024-02-12
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -23,6 +23,7 @@ number:	1472
 - [x] ~5 minutes: Do some toothpaste research
 - [x] ~7 minutes: Continue with trip prep
 - [x] ~5 minutes: Add weekend summaries and week summary https://github.com/vipulnaik/daily-updates/commit/2e52fba9bee2a9f13595a595dde57ba2e2d498cd
+- [x] ~2 minutes: Make retroactive fixes to daily updates https://github.com/vipulnaik/daily-updates/commit/c4664856b161064f8e7b7127c17df20c3c06e63e
 - [x] ~10 minutes: Continue with bottle cleaning and clean vegetable trays of the fridge
 - [x] ~20 minutes: Potatoes prep (with spinach, peas, and tomatoes)
 - [x] ~5 minutes: Update phone emergency settings
