Make a tweak to the time spent data for Sunday; fetch latest personal issues; backfill updates to a couple of older issues

--- a/personal-issues/1478.md
+++ b/personal-issues/1478.md
@@ -18,10 +18,14 @@ Starting this date, while I'm in India, I'm using IST to define my days.
 
 - [x] ~1 hour 30 minutes: Get through steps after landing of the flight; get back home
 - [x] ~20 minutes: Unpack and get set up
-- [x] ~20 minutes: Get informed on some house setup stuff from my parents
 - [x] ~10 minutes: Take care of post-arrival updates, such as changing IP address in whitelists, reversing the temporary battery settings during my trip, etc.
 - [x] ~1 hour: Take care of a few document reviews and coordination activities
 - [x] ~5 minutes: Start process of cleaning up travel notes
+- [x] ~5 minutes: Post-travel laundry
+
+## House chores
+
+- [x] ~20 minutes: Get informed on some house setup stuff from my parents
 
 ## Other activities
 
