--- a/personal-issues/1479.md
+++ b/personal-issues/1479.md
@@ -12,6 +12,7 @@ number:	1479
 
 - [x] ~1 hour: Make a couple of bureaucratic trips
 - [x] ~3 hours 30 minutes: Do a bunch of cleaning up of records associated with my travel; take care of various followup checks and updates
+- [x] ~25 minutes: Continue working on improving extraction of nutrition information from my food purchase data
 
 ## Other activities
 
