--- a/personal-issues/1480.md
+++ b/personal-issues/1480.md
@@ -1,5 +1,5 @@
 title:	Vipul Tuesday checklist | 2024-02-20
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -11,9 +11,13 @@ number:	1480
 ## Personal chores
 
 - [x] ~20 minutes: Continue with some updates related to my travel and related adjustments
-- [x] ~4 hours: A bureaucratic trip
-- [x] ~20 minutes: Do some recording work, both for the trip and for other related stuff 
+- [x] ~4 **hours**: A bureaucratic trip
+- [x] ~20 minutes: Do some recording work, both for the trip and for other related stuff
+- [x] ~15 minutes: Add summaries for past week https://github.com/vipulnaik/daily-updates/commit/53930f5e268512f4a48731257971b772a1257083
+- [x] ~2 minutes: Update preamble https://github.com/vipulnaik/daily-updates/commit/78babb60b40d0c802effbfb0c279af364a86bf27
+- [x] ~13 minutes: Take care of exporting some data https://github.com/vipulnaik/diet-exercise-health/commit/5af44139c4ddb5967d354026f166f2f88700ae93
 
 ## Other activities
 
-- [x] ~15 minutes: Continue watching videos
+- [x] ~20 minutes: Continue watching videos
+- [x] ~30 minutes: Chat with parents
