--- a/personal-issues/1482.md
+++ b/personal-issues/1482.md
@@ -1,5 +1,5 @@
 title:	Vipul Thursday checklist | 2024-02-22
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -8,8 +8,24 @@ projects:
 milestone:	
 number:	1482
 --
+## Personal projects
+
+### Devops stuff
+
+- [x] ~13 minutes: Implement disk space check in service monitor script
+- [x] ~20 minutes: Implement system-level dark mode honoring when the cookie is not yet (for instance, https://github.com/vipulnaik/donations/commit/0f7eb6183e184fc46c7a5aa42c7f41a539c78dd2); implement this across 7 repos
+- [x] ~4 minutes: Take stock of my old gameplan and mark completion of some items that have been completed in the past few months but not marked on the gameplan
+- [x] ~40 minutes: Take care of a MediaWiki upgrade
+- [x] ~19 minutes: Start work on preliminary steps for the next MediaWiki upgrade 
+
 ## Personal chores
 
 - [x] ~5 minutes: Continue updating various notes related to travel and post-travel adjustment
 - [x] ~3 minutes: Take care of some laundry stuff
 - [x] ~35 minutes: Record more updates regarding brands in India as well as things I plan to leave behind in India
+- [x] ~6 minutes: Add summaries for past 3 days https://github.com/vipulnaik/daily-updates/commit/e5b3e957f965c362c0e4fcf6a80093fc3038436f
+
+## Other activities
+
+- [x] ~5 minutes: Watch videos
+- [x] ~15 minutes: Non-work catchup with work colleagues
