Add summary for 2024-02-23; fetch latest personal issues

--- a/personal-issues/1483.md
+++ b/personal-issues/1483.md
@@ -8,7 +8,18 @@ projects:
 milestone:	
 number:	1483
 --
+## Personal projects
+
+### Devops stuff
+
+- [x] ~10 minutes: Continue working on MediaWiki site upgrade
+
 ## Personal chores
 
 - [x] ~3 minutes: Complete a travel-related check
-- [x] ~5 minutes: Continue monitoring the status for my US visa application
+- [x] ~10 minutes: Continue monitoring the status for my US visa application
+- [x] ~2 minutes: Get dried laundry
+
+## Family and career planning
+
+- [x] ~10 minute: Work on a document
