Fetch an updated issue; reflect the update in time spent in the summary

--- a/personal-issues/1481.md
+++ b/personal-issues/1481.md
@@ -17,6 +17,7 @@ number:	1481
 - [x] ~5 minutes: Execute on recall for username cheat sheet and password gotchas
 - [x] ~7 minutes: Take care of laundry
 - [x] ~10 minutes: Continue to check in on a bureaucratic matter
+- [x] ~3 minutes: Record updates to my home IP address
 
 ## House chores
 
