Fix time spent on an earlier day based on update to the daily update issue; fetch latest personal issues

--- a/personal-issues/1482.md
+++ b/personal-issues/1482.md
@@ -24,6 +24,7 @@ number:	1482
 - [x] ~3 minutes: Take care of some laundry stuff
 - [x] ~35 minutes: Record more updates regarding brands in India as well as things I plan to leave behind in India
 - [x] ~6 minutes: Add summaries for past 3 days https://github.com/vipulnaik/daily-updates/commit/e5b3e957f965c362c0e4fcf6a80093fc3038436f
+- [x] ~10 minutes: Do partial meal prep
 
 ## Other activities
 
