--- a/personal-issues/1484.md
+++ b/personal-issues/1484.md
@@ -1,5 +1,5 @@
 title:	Vipul Saturday checklist | 2024-02-24
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -8,8 +8,23 @@ projects:
 milestone:	
 number:	1484
 --
+## Personal projects
+
+### Devops stuff
+
+- [x] ~35 minutes: Continue with MediaWiki upgrade process
+
 ## Personal chores
 
 - [x] ~2 minutes: Add summary for yesterday https://github.com/vipulnaik/daily-updates/commit/406aabba395d447ee1c7fc0e244e66a6f7ac31ae https://github.com/vipulnaik/daily-updates/commit/d85f24e829e30a974c94f642286392b70fc66863
 - [x] ~1 minute: Tweak data for an earlier day https://github.com/vipulnaik/daily-updates/commit/1fc0bd8d37c47a208c43d4429f01dcd0338909a7
 - [x] ~3 minutes: Record update to my home IP address
+- [x] ~1 minute: Continue checking in on a status
+- [x] ~50 minutes: Take care of document review and some related actions
+- [x] ~1 hour 30 minutes: Do monthly password recall drill
+- [x] ~3 minutes: Do two-factor recovery drill
+
+## Other activities
+
+- [x] ~55 minutes: Tour nearby areas to the house with parents
+- [x] ~5 minutes: Continue watching videos
