Add summaries for period of 2024-03-03 to 2024-03-05; add week summary for week starting 2024-02-26; fetch latest personal issues

--- a/personal-issues/1492.md
+++ b/personal-issues/1492.md
@@ -1,5 +1,5 @@
 title:	Vipul Sunday checklist | 2024-03-03
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -8,6 +8,12 @@ projects:
 milestone:	
 number:	1492
 --
+## Personal projects
+
+### Wikipedia editing
+
+- [x] ~30 minutes: Start drafting a Wikipedia page https://github.com/vipulnaik/working-drafts/commit/a07b98fa4072db5f6a7ea14799a6efa2d6ff9b9d
+
 ## Personal finances, income and taxes
 
 - [x] ~7 minutes: Take care of some money-moving and related record updates
@@ -15,4 +21,8 @@ number:	1492
 ## Personal chores
 
 - [x] ~4 minutes: Take care of a home IP address change
-- [x] ~3 minutes: Get dried clothes 
+- [x] ~3 minutes: Get dried clothes
+- [x] ~4 minutes: Add summaries for past two days https://github.com/vipulnaik/daily-updates/commit/f021bfcadc0167643217610b78e69d060309e2f3
+- [x] ~20 minutes: Continue with trip prep work
+- [x] ~2 hours: Travel stuff, unpacking, etc.
+
