Add summaries for weekend of 2024-03-09 and 2024-03-10; add week summary; fetch latest personal issues

--- a/personal-issues/1498.md
+++ b/personal-issues/1498.md
@@ -1,5 +1,5 @@
 title:	Vipul Saturday checklist | 2024-03-09
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -10,10 +10,20 @@ number:	1498
 --
 ## Personal projects
 
+### Timelines wiki / contract work
+
 - [x] ~15 minutes: Review timeline of FTX and determine tentative pending payment amount https://github.com/vipulnaik/contractwork/commit/1640dbb096fb4274afab40a5e534a2a975d4f6ce
+
+### Devops stuff
+
+- [x] ~7 minutes: Tweak monthly long-term backup script; also, run the tweaked script
+## Personal chores
+
+- [x] ~6 minutes: Add summaries for three more days https://github.com/vipulnaik/daily-updates/commit/5ae13f42cb3abcbdcc4a103127ed24c9735fde1d
+- [x] ~3 minutes: Get dried clothes
 
 ## Other activities
 
 - [x] ~3 minutes: Read a document and offer some suggestions
 - [x] ~3 minutes: Reply to a few messages
-- [ ] ~1 hour 50 minutes so far: Help with an investigation
+- [x] ~1 hour 52 minutes: Help with an investigation
