Add summaries for 2024-03-11 and 2024-03-12; fetch latest personal issues

--- a/personal-issues/1500.md
+++ b/personal-issues/1500.md
@@ -1,5 +1,5 @@
-title:	VIpul Monday checklist | 2024-03-11
-state:	OPEN
+title:	Vipul Monday checklist | 2024-03-11
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -17,3 +17,5 @@ number:	1500
 ## Personal chores
 
 - [x] ~30 minutes: Start drafting a form for future use
+- [x] ~5 minutes: Add weekend summaries and week summary https://github.com/vipulnaik/daily-updates/commit/d14d38bb58e1554a1b674d8b7962136809b5d89f
+- [x] ~4 **hours**: Bureaucratic trip + post-trip note-taking
