Add more specific references in daily updates to visa process, now that the visa process has been completed

--- a/personal-issues/1488.md
+++ b/personal-issues/1488.md
@@ -14,7 +14,7 @@ number:	1488
 - [x] ~5 minutes: Continue following up on some bureaucratic items
 - [x] ~3 minutes: Update some India-related notes
 - [x] ~1 hour 30 minutes: Take care of some India-specific bureaucratic setup stuff
-- [x] ~3 hours: Bureaucratic trip plus a few followup items
+- [x] ~3 hours: Bureaucratic trip (passport pickup with 221(g)) plus a few followup items
 - [x] ~30 minutes: Prepare for another bureaucratic trip
 
 ## Other activities
