--- a/personal-issues/1493.md
+++ b/personal-issues/1493.md
@@ -10,7 +10,7 @@ number:	1493
 --
 ## Personal chores
 
-- [x] ~2 hours: Bureaucratic stuff + recording of details
+- [x] ~2 hours: Bureaucratic stuff (US visa interview) + recording of details
 - [x] ~2 hours: Return trip
 
 ## Other activities
