--- a/personal-issues/1500.md
+++ b/personal-issues/1500.md
@@ -18,4 +18,4 @@ number:	1500
 
 - [x] ~30 minutes: Start drafting a form for future use
 - [x] ~5 minutes: Add weekend summaries and week summary https://github.com/vipulnaik/daily-updates/commit/d14d38bb58e1554a1b674d8b7962136809b5d89f
-- [x] ~4 **hours**: Bureaucratic trip + post-trip note-taking
+- [x] ~4 **hours**: Bureaucratic trip (passport pickup) + post-trip note-taking
