Add summary for yesterday (2024-03-14); fetch latest personal issues

--- a/personal-issues/1503.md
+++ b/personal-issues/1503.md
@@ -8,8 +8,20 @@ projects:
 milestone:	
 number:	1503
 --
+## Personal projects
+
+### Blog posts
+
+- [x] ~25 minutes: Start draft post on preventing  and minimizing collision injury https://github.com/vipulnaik/working-drafts/commit/f484bc424e6d5f968c7f595480fdd47e205bd55b
+
 ## Personal chores
 
-- [ ] ~30 minutes so far: Continue with trip prep and various checklist updates
+- [x] ~2 hours: Continue with trip prep, packing, and various checklist updates
+- [x] ~20 minutes: Update clothes stock-taking
 - [x] ~3 minutes: Take care of home IP address change
-- [x] ~3 minutes: Get dried clothes 
+- [x] ~3 minutes: Get dried clothes
+- [x] ~2 minutes: Add summary for yesterday https://github.com/vipulnaik/daily-updates/commit/c8aa9d4b8213edd9ed7e7956b6d980a72130e2e4
+
+## Other activities
+
+- [x] ~2 hours: Chat with parents
